--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 # Site settings
 title: DVCoders
+subtitle: Where the coders belong
 email: info@dvcoders.com
 description: DVCoders official club website
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://dvcoders.github.io" # the base hostname & protocol for your site
+baseurl: "dvcoders-web" # the subpath of your site, e.g. /blog/
+url: "jakeloo.me" # the base hostname & protocol for your site
 twitter_username: dvcoders
 github_username:  dvcoders
 
