--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ baseurl: "/dvcoders-web" # the subpath of your site, e.g. /blog/
 url: "http://jakeloo.me" # the base hostname & protocol for your site
 twitter_username: dvcoders
 github_username:  dvcoders
+facebook_username: 
 
 # Build settings
 markdown: kramdown
