--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@
 title: DVCoders
 subtitle: Where the coders belong
 email: info@dvcoders.com
-description: DVCoders official club website
+description: DVCoders club website
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://dvcoders.github.io" # the base hostname & protocol for your site
 twitter_username: dvcoders
 github_username:  dvcoders
 facebook_username: 
-footer_note: Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae
+footer_note: DVCoders 2015.
 
 # Build settings
 markdown: kramdown
