Change title. Change font'

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: DVCoders
+title: dvcoders
 subtitle: Where the coders belong
 email: info@dvcoders.com
 description: DVCoders club website
