--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,9 @@ subtitle: Where the coders belong
 email: info@dvcoders.com
 description: DVCoders club website
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://dvcoders.github.io" # the base hostname & protocol for your site
+url: "http://dvcoders.com" # the base hostname & protocol for your site
 twitter_username: dvcoders
 github_username:  dvcoders
-facebook_username: 
 footer_note: dvcoders 2015
 collections:
     - projects
